# KitchenPilot_pub

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Plan.md  README.md  docker-compose.yml
backend/: .env.example  README.md  pyproject.toml
backend/evals/: README.md  generate_eval_dataset.py  run_qdrant_eval.py  run_rag_benchmark.py  run_ragas_eval.py  run_v5_eval.py
backend/evals/dataset/: README.md  eval_manifest.json  rag_eval_split_250.json  rag_multiturn_questions.jsonl  rag_questions.jsonl  recipes_extracted.json  router_questions.jsonl  safety_questions.jsonl
backend/script/: README.md  chat_mimo_loop.py  chat_ollama_loop.py  chat_openai_compatible_loop.py  convert_extracted_to_seed.py  demo_api_flow.py  demo_intent_router.py  demo_qdrant_rag.py  extract_recipe_preview_html.py  preview_recipe_chunks.py  start_backend.py  stop_backend.ps1  test_chat.py  test_recommendation.py  test_recommendation_api.py  visualize_recipe_dataset.py
backend/src/kitchenpilot/: __init__.py  main.py
backend/src/kitchenpilot/agent/: __init__.py  graph.py  nodes.py  router.py  state.py
backend/src/kitchenpilot/api/: __init__.py  chat.py  dependencies.py  history.py  recipes.py  recommendations.py  router.py
backend/src/kitchenpilot/core/: __init__.py  config.py  embeddings.py  http.py  (+1 more)
backend/tests/integration/: test_agent_flow.py  test_api.py
backend/tests/unit/: test_chunks.py  test_frontend_contract.py  test_llm_provider.py  test_qdrant_store.py  test_rag_qdrant.py  test_recipe_dataset.py  test_recommender.py  test_router.py  test_safety.py  test_user_memory.py
(+55 files in other folders)
